test/files/neg/constructor-init-order.check
constructor-init-order.scala:9: warning: Reference to uninitialized value baz
  val bar1         = baz     // warn
                     ^
constructor-init-order.scala:19: warning: Reference to uninitialized variable baz
  var bar1         = baz     // warn
                     ^
2 warnings
error: No warnings can be incurred under -Werror.
